@@ -1,5 +1,10 @@
 2003-09-22  JP Rosevear <jpr@ximian.com>
 
+	* gui/dialogs/comp-editor.c (save_comp): modify and create instead
+	of update, simplify mod code
+
+2003-09-22  JP Rosevear <jpr@ximian.com>
+
 	* gui/e-day-view.c (e_day_view_finish_long_event_resize): modify
 	the object instead of update, simplify the instance handling
 	(e_day_view_finish_resize): ditto
